	  Alexander Patience (2015-09-25).
	* apps/examples/udpblaster: Add a test to stress the network by
	  sending UDP packets at a very high rate.  (2015-09-30).
	* apps/examples/uavcan: libuavcan example from Paul Alexander
	  Patience (2015-10-01).

7.13 2015-xx-xx Gregory Nutt <gnutt@nuttx.org>

	* apps/examples/fstest:  Add a generic file system test.  This is
	  essentially the same as examples/smart, but has all of the SmartFS
	  specific logic ripped out.  This was created for testing the new
	  tmpfs (2015-10-10).
	* apps/examples/zerocross: Add a Zero Cross application example.
	  From Alan Carvalho de Assis (2015-10-13).
	* apps/examples/media:  Add a simple test for access of media via
	  a block driver or MTD driver (2015-11-09).
	* apps/nshlib/nsh_ddcmd.c:  Now that NuttX automatically converts
	  block devices to character devices, all of the BCH stuff in NSH
	  can be removed (2015-11-21).
	* apps/system/hexed:  Port the hexed command line hexadeciamal
	  editor to Nuttx.  See http://apps.venomdev.net/hexed/.
	  Initial port is not functional (2015-11-21).
	* apps/fsutils/smartfs: Move into apps/fsutils from kernel, now
	  uses only open and ioctl.  From Ken Petit (2015-11-23).
	* apps/fsutils/smartfs/ and apps/nshlib/: Add configuration option
	  to supported multiple root directories. From Ken Petit (2015-11-23).
	* apps/nshlib:  Add support for 'basename' and 'dirname' commands
	  (2015-11-23).
	* apps/nshlib:  Like bash, NSH set command should strip off any
	  leading or trailing whitespace (2015-11-23).
	* apps/nshlib: The mount commands now accepts mount options (currently
	  needed only for the hostfs file system).  From Ken Petit (2015-11-25).
	* apps/nshlib:  NSH no longer calls losetup() and loteardown directly.
	  Now it opens /dev/loop and accomplishes these things using ioctl()
	  calls (2015-11-25).
	* apps/nshlib:  If CONFIG_NETDEV_STATISTICS=y, then print the network
	  driver statistics in the ifconfig (15-11-26).
